--- a/css/timeline.css
+++ b/css/timeline.css
@@ -60,8 +60,8 @@
     width: 80px;
     height: 80px;
     margin-left: 0;
-    border: 7px solid #f1f1f1;
-    border-radius: 100%;
+    /*border: 7px solid #f1f1f1;
+    border-radius: 100%; */
     text-align: center;
     color: #fff;
     background-color: #f1f1f1;
