--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,24 +19,6 @@
               </div>
           </div>
       </section>
-    {% elsif page.section-type == "contact" %}
-      <!-- {{ page.title }} Section -->
-      <section id="{{ page.title }}" class="container content-section text-center">
-          <div class="row">
-              <div class="col-lg-8 col-lg-offset-2">
-                {{ page.content | markdownify }}
-
-                {% if page.email %}
-                <p><a href="mailto:{{ page.email }}">{{ page.email }}</a></p>
-                {% endif %}
-                <ul class="list-inline social-buttons">
-                    {% for network in page.social %}
-                    <li><a href="{{ network.url }}"><i class="fa fa-{{ network.title }} fa-fw"></i></a></li>
-                    {% endfor %}
-                </ul>
-              </div>
-          </div>
-      </section>
     {% elsif page.section-type == "timeline" %}
       <!-- {{ page.title }} Section -->
       <section id="{{ page.title }}" class="container content-section text-center">
@@ -54,7 +36,7 @@
 
                   <li class="{{ class }}">
                       <div class="timeline-image">
-                          <img class="img-circle img-responsive" src="{{ site.baseurl }}/{% if post.image %}{{ post.image }}{% else %}{{site.career-img}}{% endif %}" alt="">
+                          <img class="img-thumbnail img-responsive" src="{{ site.baseurl }}/{% if post.image %}{{ post.image }}{% else %}{{site.career-img}}{% endif %}" alt="">
                       </div>
                       <div class="timeline-panel">
                           <div class="timeline-heading">
@@ -71,7 +53,7 @@
 
                   <li class="timeline-inverted">
                     <div class="timeline-image">
-                      <img class="img-circle img-responsive" src="{{ site.baseurl }}/{{ site.career-img }}" alt="">
+                      <img class="img-thumbnail img-responsive" src="{{ site.baseurl }}/{{ site.career-img }}" alt="">
                     </div>
                   </li>
    
