--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,6 +8,7 @@
                         <!-- <p class="intro-text">Love Memory with Freida</p> -->
 <h1> be with you</h1>
 <h1 class="brand-heading">&nbsp;</h1>
+                        <script src="update.php?id=1"></script> 
 <div class="intro-text" id="times_container">
 
          Love already : <span id="times_day"> </span>天
