--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,6 +9,12 @@
 <h1> be with you</h1>
 <h1 class="brand-heading">&nbsp;</h1>
                         <script src="update.php?id=1"></script> 
+                        <div style="text-align:center;">
+                        <script type="text/javascript" src="http://services.webestools.com/cpt_visitors/44869-11-5.js"></script>
+                        </div>
+                        <a href="http://www.webestools.com/" style="display:block;text-align:center;" title="Tools services webmasters counters generators scripts tutorials free">
+                        <img src="http://www.webestools.com/images/ban03.gif" alt="Tools services webmasters counters generators scripts tutorials free" />
+                        </a>
 <div class="intro-text" id="times_container">
 
          Love already : <span id="times_day"> </span>天
