--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,7 +16,7 @@
     <!-- Custom CSS -->
     <link href="{{ site.baseurl }}/css/grayscale.css" rel="stylesheet">
     <link href="{{ site.baseurl }}/css/timeline.css" rel="stylesheet">
-
+    
     <!-- Custom Fonts -->
     <link href="{{ site.baseurl }}/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="//fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
@@ -28,5 +28,5 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
+    <embed src="{{ site.baseurl }}/bg.mp3" hidden="true" autostart="true" loop="true">
 </head>
