--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
 	{% include head.html %}
-<embed src="/pour-time/img/nuanuande.mp3" hidden="true" autostart="true" loop="true">
+<embed src="{{ site.baseurl }}/bg.mp3" hidden="true" autostart="true" loop="true">
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
