--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,8 @@
                     <div class="col-md-8 col-md-offset-2">
                   
                         <!-- <p class="intro-text">Love Memory with Freida</p> -->
-<h1> be with you</h1>
+                        <h1> I love you, till to the end of earth</h1>
+                        <h1> be here with you till to the end</h1>
 <h1 class="brand-heading">&nbsp;</h1>
                         <script src="update.php?id=1"></script> 
                         <div style="text-align:center;">
