--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,8 +28,8 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <embed src="{{ site.baseurl }}/bg.mp3" hidden="true" autostart="true" loop="true">
+    <embed src="{{ site.baseurl }}/bg2.mp3" hidden="true" autostart="true" loop="true">
     <audio autoplay="autoplay" controls="controls" hidden="true" autostart="true" loop="true">
-    <source src="{{ site.baseurl }}/bg.mp3" type="audio/mpeg" hidden="true" autostart="true" loop="true">
+    <source src="{{ site.baseurl }}/bg2.mp3" type="audio/mpeg" hidden="true" autostart="true" loop="true">
     </audio>
 </head>
